--- a/FiducialRegistrationWizard/CMakeLists.txt
+++ b/FiducialRegistrationWizard/CMakeLists.txt
@@ -20,6 +20,9 @@ set(MODULE_INCLUDE_DIRECTORIES
   ${CMAKE_CURRENT_SOURCE_DIR}/Widgets
   ${CMAKE_CURRENT_BINARY_DIR}/Widgets
   ${qSlicerMarkupsModuleWidgets_INCLUDE_DIRS}
+  ${Slicer_INSTALL_QTLOADABLEMODULES_INCLUDE_DIR}/qSlicerMarkupsModuleWidgets
+  ${Slicer_INSTALL_QTLOADABLEMODULES_INCLUDE_DIR}/vtkSlicerMarkupsModuleLogic
+  ${Slicer_INSTALL_QTLOADABLEMODULES_INCLUDE_DIR}/vtkSlicerMarkupsModuleMRML
   )
 
 set(MODULE_SRCS
@@ -51,6 +54,9 @@ set(MODULE_RESOURCES
   )
 
 #-----------------------------------------------------------------------------
+
+link_directories(${Slicer_INSTALL_QTLOADABLEMODULES_LIB_DIR})
+
 slicerMacroBuildQtModule(
   NAME ${MODULE_NAME}
   TITLE ${MODULE_TITLE}
