--- a/PathExplorer/SubjectHierarchyPlugins/CMakeLists.txt
+++ b/PathExplorer/SubjectHierarchyPlugins/CMakeLists.txt
@@ -6,12 +6,13 @@ set(${KIT}_EXPORT_DIRECTIVE "Q_SLICER_${MODULE_NAME_UPPER}_SUBJECT_HIERARCHY_PLU
 
 set(${KIT}_INCLUDE_DIRECTORIES
   ${vtkSlicerPathExplorerModuleLogic_INCLUDE_DIRS}
-  ${qSlicerSubjectHierarchyModuleWidgets_INCLUDE_DIRS}
-  ${vtkSlicerSubjectHierarchyModuleLogic_INCLUDE_DIRS}
-  ${qMRMLWidgets_INCLUDE_DIRS}
-  ${MRMLLogic_INCLUDE_DIRS}
-  ${MRMLCore_INCLUDE_DIRS}
-  ${Slicer_DIR}
+  ${Slicer_INSTALL_QTLOADABLEMODULES_INCLUDE_DIR}/vtkSlicerSubjectHierarchyModuleLogic
+  ${Slicer_INSTALL_QTLOADABLEMODULES_INCLUDE_DIR}/qSlicerSubjectHierarchyModuleWidgets
+  ${MRML_INCLUDE_DIRS}
+  ${Slicer_INCLUDE_DIR}
+  ${Slicer_Base_INCLUDE_DIRS}
+  ${vtkAddon_INCLUDE_DIRS}
+  ${Slicer_Libs_INCLUDE_DIRS}
   )
 
 set(${KIT}_SRCS
@@ -39,7 +40,13 @@ set(${KIT}_TARGET_LIBRARIES
   qMRMLWidgets
   MRMLLogic
   MRMLCore
+  vtkAddon
+  ${VTK_LIBRARIES}
+  Qt5::Xml
+  ${CTK_LIBRARIES}
   )
+
+link_directories(${Slicer_INSTALL_QTLOADABLEMODULES_LIB_DIR})
 
 #-----------------------------------------------------------------------------
 SlicerMacroBuildModuleQtLibrary(
