--- a/PivotCalibration/CMakeLists.txt
+++ b/PivotCalibration/CMakeLists.txt
@@ -35,6 +35,9 @@ set(MODULE_UI_SRCS
 
 set(MODULE_TARGET_LIBRARIES
   vtkSlicer${MODULE_NAME}ModuleLogic
+  vtkIGSIOCalibration
+  ${CTK_LIBRARIES}
+  qMRMLWidgets
   )
 
 set(MODULE_RESOURCES
