--- a/VolumeReconstruction/Logic/CMakeLists.txt
+++ b/VolumeReconstruction/Logic/CMakeLists.txt
@@ -5,8 +5,9 @@ set(KIT "${PROJECT_NAME}")
 set(${KIT}_EXPORT_DIRECTIVE "VTK_SLICER_${MODULE_NAME_UPPER}_MODULE_LOGIC_EXPORT")
 set(${KIT}_INCLUDE_DIRECTORIES
   ${vtkSlicer${MODULE_NAME}ModuleMRML_INCLUDE_DIRS}
-  ${vtkSlicerSequencesModuleMRML_INCLUDE_DIRS}
-  ${vtkSlicerAnnotationModuleMRML_INCLUDE_DIRS}
+  ${Slicer_INSTALL_QTLOADABLEMODULES_INCLUDE_DIR}/vtkSlicerAnnotationsModuleMRML
+  ${Slicer_INSTALL_QTLOADABLEMODULES_INCLUDE_DIR}/vtkSlicerSequencesModuleMRML
+  ${Slicer_INSTALL_QTLOADABLEMODULES_INCLUDE_DIR}/vtkSlicerMarkupsModuleMRML
   ${VTKVOLUMERECONSTRUCTION_INCLUDE_DIRS}
   )
 
@@ -20,7 +21,10 @@ set(${KIT}_TARGET_LIBRARIES
   vtkSlicer${MODULE_NAME}ModuleMRML
   vtkSlicerMarkupsModuleMRML
   vtkVolumeReconstruction
+  vtkIGSIOCommon
   )
+
+link_directories(${Slicer_INSTALL_QTLOADABLEMODULES_LIB_DIR})
 
 #-----------------------------------------------------------------------------
 SlicerMacroBuildModuleLogic(
