--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,13 +20,7 @@ set(EXTENSION_DEPENDS SlicerIGSIO)
 # Extension dependencies
 find_package(Slicer REQUIRED)
 include(${Slicer_USE_FILE})
-
-if (NOT DEFINED Slicer_EXTENSION_SOURCE_DIRS)
-  find_package(SlicerIGSIO REQUIRED) 
-else()
-  # Allow usage if dependent extension is bundled
-  find_package(IGSIO REQUIRED) 
-endif()
+find_package(IGSIO REQUIRED)
 
 #-----------------------------------------------------------------------------
 # Extension modules
@@ -54,4 +48,4 @@ endif(SLICERIGT_ENABLE_EXPERIMENTAL_MODULES)
 
 #-----------------------------------------------------------------------------
 include(${Slicer_EXTENSION_GENERATE_CONFIG})
-include(${Slicer_EXTENSION_CPACK})
+# include(${Slicer_EXTENSION_CPACK})
