--- a/CreateModels/CMakeLists.txt
+++ b/CreateModels/CMakeLists.txt
@@ -35,6 +35,8 @@ set(MODULE_UI_SRCS
 
 set(MODULE_TARGET_LIBRARIES
   vtkSlicer${MODULE_NAME}ModuleLogic
+  qMRMLWidgets
+  ${CTK_LIBRARIES}
   )
 
 set(MODULE_RESOURCES
