--- a/PathExplorer/Logic/CMakeLists.txt
+++ b/PathExplorer/Logic/CMakeLists.txt
@@ -5,6 +5,7 @@ set(KIT ${PROJECT_NAME})
 set(${KIT}_EXPORT_DIRECTIVE "VTK_SLICER_${MODULE_NAME_UPPER}_MODULE_LOGIC_EXPORT")
 
 set(${KIT}_INCLUDE_DIRECTORIES
+  ${Slicer_INSTALL_QTLOADABLEMODULES_INCLUDE_DIR}/vtkSlicerMarkupsModuleMRML
   )
 
 set(${KIT}_SRCS
@@ -16,6 +17,8 @@ set(${KIT}_TARGET_LIBRARIES
   vtkSlicerPathExplorerModuleMRML
   ${ITK_LIBRARIES}
   )
+
+link_directories(${Slicer_INSTALL_QTLOADABLEMODULES_LIB_DIR})
 
 #-----------------------------------------------------------------------------
 SlicerMacroBuildModuleLogic(
