--- a/VolumeReconstruction/MRML/CMakeLists.txt
+++ b/VolumeReconstruction/MRML/CMakeLists.txt
@@ -5,8 +5,10 @@ set(KIT ${PROJECT_NAME})
 set(${KIT}_EXPORT_DIRECTIVE "VTK_SLICER_${MODULE_NAME_UPPER}_MODULE_MRML_EXPORT")
 
 set(${KIT}_INCLUDE_DIRECTORIES
-  ${vtkSlicerSequencesModuleMRML_INCLUDE_DIRS}
   ${VTKVOLUMERECONSTRUCTION_INCLUDE_DIRS}
+  ${Slicer_INSTALL_QTLOADABLEMODULES_INCLUDE_DIR}/vtkSlicerAnnotationsModuleMRML
+  ${Slicer_INSTALL_QTLOADABLEMODULES_INCLUDE_DIR}/vtkSlicerMarkupsModuleMRML
+  ${Slicer_INSTALL_QTLOADABLEMODULES_INCLUDE_DIR}/vtkSlicerSequencesModuleMRML
   )
 
 set(${KIT}_SRCS
@@ -20,6 +22,8 @@ set(${KIT}_TARGET_LIBRARIES
   vtkVolumeReconstruction
   vtkSlicerAnnotationsModuleMRML
   )
+
+link_directories(${Slicer_INSTALL_QTLOADABLEMODULES_LIB_DIR})
 
 # --------------------------------------------------------------------------
 SlicerMacroBuildModuleMRML(
