--- a/VolumeResliceDriver/Logic/CMakeLists.txt
+++ b/VolumeResliceDriver/Logic/CMakeLists.txt
@@ -11,6 +11,8 @@ set(${KIT}_EXPORT_DIRECTIVE "VTK_SLICER_${MODULE_NAME_UPPER}_MODULE_LOGIC_EXPORT
 
 # Additional directories to include
 set(${KIT}_INCLUDE_DIRECTORIES
+    ${Slicer_INSTALL_QTLOADABLEMODULES_INCLUDE_DIR}/vtkSlicerMarkupsModuleMRML
+    ${Slicer_INSTALL_QTLOADABLEMODULES_INCLUDE_DIR}/vtkSlicerAnnotationsModuleMRML
   )
 
 # Source files
@@ -26,6 +28,7 @@ set(${KIT}_TARGET_LIBRARIES
   ${ITK_LIBRARIES}
   )
 
+link_directories(${Slicer_INSTALL_QTLOADABLEMODULES_LIB_DIR})
 
 #-----------------------------------------------------------------------------
 SlicerMacroBuildModuleLogic(
