--- a/VolumeResliceDriver/Widgets/CMakeLists.txt
+++ b/VolumeResliceDriver/Widgets/CMakeLists.txt
@@ -27,6 +27,7 @@ set(${KIT}_RESOURCES
 
 set(${KIT}_TARGET_LIBRARIES
   vtkSlicer${MODULE_NAME}ModuleLogic
+  qMRMLWidgets
   )
 
 #-----------------------------------------------------------------------------
